Switch to java 19 and use Virtual Threads